src/test/deca/etapeB/invalid/assign_diff_type_bool_float.res
./src/test/deca/etapeB/invalid/assign_diff_type_bool_float.deca:7:0: type not defined 
